[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/felpudo/felpudoVoa2.png" type="Texture" id=1]
[ext_resource path="res://assets/felpudo/felpudoVoa3.png" type="Texture" id=2]
[ext_resource path="res://assets/felpudo/felpudoVoa1.png" type="Texture" id=3]
[ext_resource path="res://assets/felpudo/felpudoVoa4.png" type="Texture" id=4]
[ext_resource path="res://assets/felpudo/felpudoVoa6.png" type="Texture" id=5]
[ext_resource path="res://assets/felpudo/felpudoVoa5.png" type="Texture" id=6]
[ext_resource path="res://scripts/Bird.gd" type="Script" id=7]
[ext_resource path="res://assets/fundo.png" type="Texture" id=8]
[ext_resource path="res://scenes/pipe.tscn" type="PackedScene" id=9]
[ext_resource path="res://scripts/Generator.gd" type="Script" id=10]
[ext_resource path="res://scripts/game.gd" type="Script" id=11]
[ext_resource path="res://assets/font160.tres" type="DynamicFont" id=12]
[ext_resource path="res://sound/somScore.ogg" type="AudioStream" id=13]
[ext_resource path="res://sound/somHit.ogg" type="AudioStream" id=14]
[ext_resource path="res://sound/somVoa.ogg" type="AudioStream" id=15]

[sub_resource type="Animation" id=1]
resource_name = "BackAnim"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("BackAnim/Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( -1026, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("BackAnim/Sprite2:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1026, 0 ), Vector2( 0, 0 ) ]
}

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "default",
"speed": 7.0
} ]

[sub_resource type="CircleShape2D" id=3]
radius = 100.515

[sub_resource type="SegmentShape2D" id=4]
b = Vector2( 1000.43, 0 )

[sub_resource type="SegmentShape2D" id=5]
b = Vector2( 1000.31, -0.283813 )

[node name="GameNode" type="Node2D"]
script = ExtResource( 11 )

[node name="BackAnim" type="AnimationPlayer" parent="."]
autoplay = "BackAnim"
anims/BackAnim = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="BackAnim"]
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Sprite2" type="Sprite" parent="BackAnim"]
position = Vector2( 1026, 0 )
scale = Vector2( 3.8, 3.6 )
texture = ExtResource( 8 )
centered = false

[node name="Bird" type="RigidBody2D" parent="."]
position = Vector2( 189.096, 622.718 )
z_index = 1
mode = 2
gravity_scale = 18.0
script = ExtResource( 7 )

[node name="BirdAnim" type="AnimatedSprite" parent="Bird"]
position = Vector2( -7.12744, -3.56366 )
scale = Vector2( 1.4, 1.4 )
frames = SubResource( 2 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Bird"]
position = Vector2( 11, -3 )
shape = SubResource( 3 )

[node name="FlySong" type="AudioStreamPlayer" parent="Bird"]
stream = ExtResource( 15 )

[node name="Limits" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Limits"]
shape = SubResource( 4 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Limits"]
position = Vector2( 0.0484314, 1700.1 )
shape = SubResource( 5 )

[node name="Pipes" type="Node2D" parent="."]
z_index = 1

[node name="Pipe" parent="Pipes" instance=ExtResource( 9 )]
position = Vector2( 1357.62, 843.951 )
z_index = 1

[node name="Generator" type="Position2D" parent="Pipes"]
position = Vector2( 1365.17, 847.053 )
script = ExtResource( 10 )

[node name="Timer" type="Timer" parent="Pipes/Generator"]
wait_time = 3.0
autostart = true

[node name="TimeToReplay" type="Timer" parent="."]
wait_time = 2.0

[node name="Node2D" type="Node2D" parent="."]
z_index = 2

[node name="Control" type="Control" parent="Node2D"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Node2D/Control"]
margin_top = 72.0
margin_right = 994.0
margin_bottom = 265.0
custom_fonts/font = ExtResource( 12 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )

[node name="HitSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 14 )
[connection signal="timeout" from="Pipes/Generator/Timer" to="Pipes/Generator" method="_on_Timer_timeout"]
[connection signal="timeout" from="TimeToReplay" to="." method="_on_TimeToReplay_timeout"]
